1994-05-31  dickey@clark.net

	* src/isatty/isatty.c: RCS_BASE

1991-10-29  Thomas E. Dickey  <dickey@software.org>

	* src/cpd/cpd.c: RCS_BASE

1990-04-23  Thomas E. Dickey  <dickey@software.org>

	* src/sue/sue.c: RCS_BASE
