@@ -1,3 +1,12 @@
+1994-06-02  dickey@clark.net
+
+	* src/newpath/newpath.c: added some traces
+
+	* src/newpath/newpath.c:
+	corrected the 'Remove()' code to remove _all_ entries with the same name
+
+	* src/newpath/newpath.c: RCS_BASE
+
 1994-05-31  dickey@clark.net
 
 	* src/isatty/isatty.c: RCS_BASE
